external-crates/move/crates/move-compiler/tests/move_2024/matching/counterexample_guards.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/counterexample_guards.move:9:16
  │
9 │         match (Option::Some(0)) {
  │                ^^^^^^^^^^^^^^^ Pattern 'Option::Some(_)' not covered
  │
  = Match arms with guards are not considered for coverage.
